# Blackjack

./: CMakeLists.txt  CMakePresets.json  Gui.cpp  Gui.h  Main.cpp
